# smart-farm

OUVRIER/: Makefile  Makefile.am  Makefile.in  abs.txt  config.h  config.status  configure  configure.in  ouvrier.glade  ouvrier.gladep.bak  utilisateurs.txt
OUVRIER/autom4te.cache/: output.0  requests  traces.0  traces.1
OUVRIER/po/: Makefile  Makefile.in
OUVRIER/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  main.c  ouvrier  ouvrier.c  ouvrier.h
farmR 2/: Makefile  config.status  farm1.glade.bak
farmR 2/autom4te.cache/: requests
farmR 2/src/: Makefile  callbacks.c  capteur.c  capteur.h  capteurs.txt  farm1  interface.c  interface.c.bak  interface.h.bak  utilisateur.txt
gesclient/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gesclient.glade.bak  gesclient.gladep.bak
gesclient/autom4te.cache/: output.1  requests  traces.0  traces.1
gesclient/po/: Makefile  Makefile.in
gesclient/src/: Clients.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  client.c  client.h  gesclient  interface.c.bak  interface.h.bak  main.c  utilisateur.txt
projet11/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestion des troupeaux .glade  gestion des troupeaux .glade.bak  gestion des troupeaux .gladep.bak
projet11/src/: 123  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  troupeau.c  troupeau.h  troupeau.txt
projet11/src/.deps/: callbacks.Po  troupeau.Po
(+8 files in other folders)
